Fixed business logic and made it simpler
- Stopped using the date related logic bc it was too complicated to make sense of it, and make updates to it
- Instead, leveraged the interval and used a simple decrement counter to keep track of the time remaining
- Laid down the groundwork of setting a 25 or 50 minute timer
- Cleaned up functional abstractions

--- a/countdown.html
+++ b/countdown.html
@@ -11,7 +11,7 @@
 
   <div class="container">
     <div id="tomato">🍅</div>
-    <div id="countdown">25:00</div>
+    <div id="countdown">00:00</div>
     
     <div class="buttons">
       <button type="button" onclick="playPauseCountdown()">
@@ -19,7 +19,7 @@
           <img id="playPause" src="playButton4x.png">
         </div>
       </button>
-      <button type="button" onclick="resetCountdown()">
+      <button type="button" onclick="restartCountdown()">
         <div class="imageContainer" id="resetButton">
           <img src="resetButton4x.png">
         </div>
