Clicking on tomato changes duration
- To switch between a 25 minute and 50 minute pomodoro, click on the tomato. Needed to update the business logic a bit to differentiate between the total duration vs current remaining duration by introducing a new variable (pomodoroDuration). Whoo! Thank you justinwlin

--- a/countdown.html
+++ b/countdown.html
@@ -10,8 +10,11 @@
   <script src="countdown.js"></script>
 
   <div class="container">
-    <div id="tomato">🍅</div>
-    <div id="countdown">00:00</div>
+      <button id="tomato" type="button" onclick="updateDuration()">
+        🍅
+      </button>
+
+    <div id="countdown">50:00</div>
     
     <div class="buttons">
       <button type="button" onclick="playPauseCountdown()">
